# deskd

./: .archlint.yaml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SETUP.md  build.rs  install.sh
.claude/: settings.json
.claude/hooks/: rustfmt-on-save.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ARCHLINT_ROADMAP.md  CHANNELS.md  TARGET_ARCHITECTURE.md  TUI_SPEC.md
graphs/: pr-review-merge.yaml
src/: agent.rs  bus.rs  cli.rs  config.rs  inbox.rs  lib.rs  main.rs  mcp.rs  message.rs  schedule.rs  serve.rs  statemachine.rs  tasklog.rs  worker.rs
src/adapters/: discord.rs  mod.rs  telegram.rs
src/app/: a2a.rs  a2a_server.rs  acp.rs  agent.rs  agent_process.rs  agent_registry.rs  agent_state.rs  bus.rs  bus_api.rs  cli.rs  config_changeset.rs  config_reload.rs  config_watcher.rs  context.rs  context_size.rs  jsonrpc.rs  mcp.rs  mcp_protocol.rs  mcp_service.rs  mcp_tools.rs  metrics.rs  mod.rs  process_builder.rs  schedule.rs  serve.rs  statemachine.rs  task.rs  tasklog.rs  timeout_sweep.rs  tmux_launcher.rs  tui.rs  worker.rs  workflow.rs
src/app/adapters/: mod.rs  telegram.rs
src/app/adapters/federation/: forward.rs  frame.rs  glob.rs  hub.rs  mod.rs  peer.rs  preflight.rs  registry.rs  routing.rs
src/app/adapters/web/: audit.rs  data.rs  dispatch.rs  mod.rs  router.rs  state.rs  templates.rs
src/app/adapters/web/routes/: agent_detail.rs  dashboard.rs  github_webhook.rs  login.rs  logout.rs  metrics.rs  mod.rs  sse.rs  static_assets.rs
src/app/adapters/web/static/: dashboard.css
src/app/adapters/web/view/: cards.rs  detail.rs  mod.rs  strip.rs
src/app/commands/: a2a.rs  agent.rs  dashboard.rs  mod.rs  remind.rs  restart.rs  sm.rs  status.rs  task.rs  tui.rs  usage.rs
src/commands/: agent.rs  graph.rs  mod.rs  remind.rs  restart.rs  schedule.rs  sm.rs  status.rs  task.rs  upgrade.rs
src/domain/: agent.rs  config_types.rs  context.rs  events.rs  message.rs  mod.rs  statemachine.rs  task.rs  workitem.rs
src/infra/: bus_server.rs  context_store.rs  dto.rs  memory_bus.rs  memory_store.rs  mod.rs  paths.rs  unix_bus.rs
src/infra/dto/: bus.rs  config.rs  context.rs  instance.rs  mod.rs  task.rs
src/ports/: bus.rs  bus_wire.rs  mod.rs  store.rs
tests/: agent_lifecycle.rs  agent_state_mcp.rs  budget_enforcement.rs  bus_integration.rs  crash_recovery.rs  federation_forward.rs  federation_smoke.rs  mcp_channel_subprocess.rs  message_bus_trait.rs  recurring_reminders.rs  web_adapter.rs  web_agent_detail.rs  web_dashboard.rs  workflow_transitions.rs
tui/: package-lock.json  package.json  tsconfig.json
tui/src/: app.tsx  bus.ts  index.tsx  theme.ts
tui/src/hooks/: useAgents.ts  useBus.ts  useCosts.ts  useSchedules.ts  useTasks.ts  useWorkflows.ts
tui/src/views/: AgentDetail.tsx  BusStream.tsx  CostTracker.tsx  Dashboard.tsx  Schedules.tsx  TaskDetail.tsx  TaskQueue.tsx  WorkflowView.tsx  types.ts
