[package]
name = "deskd"
version = "0.1.0"
edition = "2024"
description = "Agent orchestration runtime — spawn, route, and manage AI agents"
license = "MIT"


[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
teloxide = { version = "0.13", features = ["macros"] }
cron = "0.12"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
base64 = "0.22.1"
futures = "0.3"
chrono-tz = "0.10.4"
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
ring = "0.17"

[lib]
name = "deskd"
path = "src/lib.rs"

[[bin]]
name = "deskd"
path = "src/main.rs"

[[bin]]
name = "session2graph"
path = "src/bin/session2graph.rs"

[features]
default = []
vendored-openssl = ["openssl"]
